Username Update is Done

--- a/hello/.gitignore
+++ b/hello/.gitignore
@@ -33,5 +33,5 @@ build/
 .vscode/
 .env
 
-.properties
-/hello/src/main/resources/application.properties
+*.properties
+hello/src/main/resources/application.properties
