--- a/hello/src/main/resources/application.properties
+++ b/hello/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
 
 # Database connection protocols
-
+#algorithms
 spring.datasource.username=postgres
 spring.datasource.password=password
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL92Dialect
