--- a/hello/src/main/resources/application.properties
+++ b/hello/src/main/resources/application.properties
@@ -7,6 +7,7 @@ spring.mvc.view.suffix=.jsp
 
 # Database connection protocols
 #algorithms
+spring.datasource.url=jdbc:postgresql://localhost:5432/ChatappUser
 spring.datasource.username=postgres
 spring.datasource.password=password
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL92Dialect
