--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
 		<relativePath/>
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>hello</artifactId>
+	<artifactId>webchat</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>hello</name>
-	<description>Hello project for Spring Boot</description>
+	<name>webchat</name>
+	<description>webchat project for Spring Boot</description>
 	<properties>
 		<java.version>11</java.version>
 	</properties>
